changed to iceland

--- a/bd-1.ipynb
+++ b/bd-1.ipynb
@@ -99,7 +99,7 @@
     "print(\"\\nДадлагын хувь харьцуулалт:\")\n",
     "print(f\"  1-р хугацаа (1978-1988): {internship_percent_1:.2f}%\")\n",
     "print(f\"  2-р хугацаа (2006-2018): {internship_percent_2:.2f}%\")\n",
-    "#USA"
+    "#Iceland"
    ]
   }
  ],
